# MiniBox

./: .gitignore  404.md  CMakeLists.txt  MiniBoxConfig.h.in  README.md  TODO  _config.yml  index.md
docs/: minibox.1.md  minibox.7.md
include/: applets.hpp  headers.hpp
src/: MiniBox.cpp  applets.cpp
src/coreutils/: echo.cpp  pwd.cpp
